# MutsukiCore

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.agents/plugins/plugins/mutsuki-plugin-dev-claude-runner/: Cargo.toml
.agents/plugins/plugins/mutsuki-plugin-dev-claude-runner/.codex-plugin/: plugin.json
.agents/plugins/plugins/mutsuki-plugin-dev-claude-runner/skills/mutsuki-plugin-dev-claude-runner/: SKILL.md
.agents/plugins/plugins/mutsuki-plugin-dev-claude-runner/src/: lib.rs
.agents/plugins/plugins/mutsuki-plugin-dev-codex-runner/: Cargo.toml
.agents/plugins/plugins/mutsuki-plugin-dev-codex-runner/.codex-plugin/: plugin.json
.agents/plugins/plugins/mutsuki-plugin-dev-codex-runner/scripts/: mutsuki_codex_runner.py  smoke_bridge.py
.agents/plugins/plugins/mutsuki-plugin-dev-codex-runner/skills/mutsuki-plugin-dev-codex-runner/: SKILL.md
.agents/plugins/plugins/mutsuki-plugin-dev-codex-runner/src/: lib.rs
.agents/plugins/plugins/mutsukicore-claude-core/: Cargo.toml
.agents/plugins/plugins/mutsukicore-claude-core/.codex-plugin/: plugin.json
.agents/plugins/plugins/mutsukicore-claude-core/skills/mutsukicore-claude-core/: SKILL.md
.agents/plugins/plugins/mutsukicore-claude-core/src/: lib.rs
.agents/plugins/plugins/mutsukicore-codex-core/: Cargo.toml
.agents/plugins/plugins/mutsukicore-codex-core/.codex-plugin/: plugin.json
.agents/plugins/plugins/mutsukicore-codex-core/scripts/: mutsukicore_codex_strategy_backend.py  smoke_bridge.py
.agents/plugins/plugins/mutsukicore-codex-core/skills/mutsukicore-agent/: SKILL.md
.agents/plugins/plugins/mutsukicore-codex-core/src/: lib.rs
.cargo/: config.toml
crates/mutsuki-runtime-benchmarks/: Cargo.toml
crates/mutsuki-runtime-benchmarks/src/: allocator.rs  batch_resource.rs  environment.rs  fixtures.rs  host_api.rs  local_dispatch.rs  longevity.rs  main.rs  report.rs  scheduling.rs  system_metrics.rs  wire_report.rs
crates/mutsuki-runtime-benchmarks/src/wire/: cases.rs  fixtures.rs  mod.rs
crates/mutsuki-runtime-benchmarks/src/wire_p1/: cases.rs  io.rs  mod.rs  server.rs
crates/mutsuki-runtime-benchmarks/src/wire_p2/: abi.rs  codec.rs  mod.rs  server.rs  transport.rs
crates/mutsuki-runtime-benchmarks/src/wire_p3/: mod.rs  rejection.rs
crates/mutsuki-runtime-host/: Cargo.toml
crates/mutsuki-runtime-host/examples/: worker_pool_benchmark.rs
crates/mutsuki-runtime-host/src/: abi_transport.rs  actor.rs  async_executor.rs  backend.rs  binary.rs  bootstrapper.rs  capabilities.rs  commands.rs  error.rs  host.rs  jsonl.rs  lib.rs  management.rs  manifest.rs  multiplexer.rs  operation.rs  plugin_host.rs  process.rs  resolver.rs  resource_router.rs  runtime_context.rs  scheduler.rs  worker.rs
crates/mutsuki-runtime-host/src/actor/: cancellation.rs
crates/mutsuki-runtime-host/src/binary/: frame.rs
crates/mutsuki-runtime-host/src/clients/: abi.rs  local.rs  mod.rs
crates/mutsuki-runtime-host/src/jsonl/: frame.rs
crates/mutsuki-runtime-host/src/multiplexer/: pending.rs  threads.rs
crates/mutsuki-runtime-host/src/resolver/: capabilities.rs  plugins.rs  surfaces.rs
crates/mutsuki-runtime-host/src/tests/: async_resources.rs  async_runtime.rs  binary.rs  bootstrapper.rs  config_permission_plugin.rs  db_sqlite_plugin.rs  dev_mock_plugin.rs  fixtures.rs  helpers.rs  host_runtime.rs  io_fs_plugin.rs  io_http_client_plugin.rs  jsonl.rs  management.rs  mod.rs  multiplexer.rs  native.rs  observe_log_plugin.rs  plugin_host.rs  process.rs  resolver.rs  resource_clients.rs  resource_commands.rs  scheduler.rs  shared_memory_resource_commands.rs  task_clients.rs  transport_failures.rs  workflow_broadcast_plugin.rs  workflow_linear_plugin.rs
crates/mutsuki-runtime-host/tests/fixtures/: jsonl_strategy_backend.py
crates/mutsuki-runtime-sdk/: Cargo.toml
crates/mutsuki-runtime-sdk/include/: mutsuki_plugin_abi_v1.h  mutsuki_plugin_abi_v2.h
crates/mutsuki-runtime-sdk/src/: abi.rs  backend.rs  batch.rs  descriptor.rs  host.rs  lib.rs  plugin.rs  portability.rs  resource.rs  tests.rs
crates/mutsuki-runtime-sdk/src/abi/: binary_guest.rs  binary_host_client.rs  dispatch.rs  error.rs  guest.rs  host_client.rs  tests.rs  types.rs
docs/: README.md  core-performance-model-v1.md  issue35-acceptance.md  issue37-acceptance.md  runtime-wire-performance-issue30.md  runtime-wire-v1.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: runtime_wire_binary.rs
mutsukibot/: __init__.py
nanobot/: __init__.py
performance/: README.md
plans/: agent-execution-boundary.md  architecture.md  (+14 more)
plugins/mutsuki-plugin-db-sqlite/: Cargo.toml
plugins/mutsuki-plugin-observe-log/: Cargo.toml
plugins/mutsuki-plugin-workflow-linear/: Cargo.toml
plugins/mutsuki-qqbot/: Cargo.toml  SKILL.md
plugins/mutsuki-qqbot/src/: gateway.rs  lib.rs  manifest.rs  runner.rs  tests.rs
python/mutsuki-runtime-python/: README.md  pyproject.toml
python/mutsuki-runtime-python/src/mutsuki_runtime_python/: __init__.py  backend.py  contracts.py  host.py  resource.py  runner.py  stdio.py  testing.py
python/mutsuki-runtime-python/src/mutsuki_runtime_python/contracts/: effect.py  errors.py  event.py  extension.py  plugin.py  resource.py  resource_plans.py  runner.py  state.py  surface.py  task.py
python/mutsuki-runtime-python/src/mutsuki_runtime_python/resources/: __init__.py  client.py  manager.py  plans.py
python/mutsuki-runtime-python/src/mutsuki_runtime_python/runners/: __init__.py  async_adapter.py  backend.py  host.py  protocol.py
python/mutsuki-runtime-python/src/mutsuki_runtime_python/testing/: assertions.py  runners.py
python/mutsuki-runtime-python/src/mutsuki_runtime_python/transport/: stdio_jsonl.py
python/mutsuki-runtime-python/tests/: test_async_adapter.py  test_backend.py  test_codex_strategy_bridge.py  test_contracts.py  test_contracts_event.py  test_contracts_plugin.py  test_contracts_resource.py  test_contracts_surface.py  test_contracts_task_runner.py  test_contracts_validation.py  test_host.py  test_mutsuki_test_io_mcp.py  test_no_legacy_import.py  test_plugin_metadata.py  test_resource.py  test_stdio.py
(+831 files in other folders)
