[workspace]
members = [
    "crates/mutsuki-runtime-contracts",
    "crates/mutsuki-runtime-core",
    "crates/mutsuki-runtime-host",
    "crates/mutsuki-runtime-sdk",
    "crates/mutsuki-runtime-sdk-macros",
    "plugins/mutsuki-plugin-resource-memory",
    "plugins/mutsuki-plugin-resource-shared-memory",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
mutsuki-runtime-contracts = { path = "crates/mutsuki-runtime-contracts" }
mutsuki-runtime-core = { path = "crates/mutsuki-runtime-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"
