[workspace]
members = [
    "crates/mutsuki-runtime-contracts",
    "crates/mutsuki-runtime-core",
    "crates/mutsuki-runtime-host",
    "crates/mutsuki-runtime-sdk",
    "crates/mutsuki-runtime-sdk-macros",
    "plugins/mutsuki-plugin-config-permission",
    "plugins/mutsuki-plugin-db-sqlite",
    "plugins/mutsuki-plugin-dev-mock",
    "plugins/mutsuki-plugin-io-fs",
    "plugins/mutsuki-plugin-io-http-client",
    "plugins/mutsuki-plugin-observe-log",
    "plugins/mutsuki-plugin-resource-memory",
    "plugins/mutsuki-plugin-resource-shared-memory",
    "plugins/mutsuki-plugin-workflow-broadcast",
    "plugins/mutsuki-plugin-workflow-linear",
    "protocols/mutsuki-protocol-config",
    "protocols/mutsuki-protocol-db",
    "protocols/mutsuki-protocol-dev",
    "protocols/mutsuki-protocol-fs",
    "protocols/mutsuki-protocol-http",
    "protocols/mutsuki-protocol-observe",
    "protocols/mutsuki-protocol-resource",
    "protocols/mutsuki-protocol-workflow",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
mutsuki-runtime-contracts = { path = "crates/mutsuki-runtime-contracts" }
mutsuki-runtime-core = { path = "crates/mutsuki-runtime-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"
