[project]
name = "nanobot"
version = "0.0.0"
description = "Agent-centric bot framework providing the runtime core for Yume / mind-sim and a plugin-composed reproduction of traditional bot framework capabilities."
requires-python = ">=3.13"
license = { file = "LICENSE" }
readme = "README.md"

dependencies = []

[project.optional-dependencies]
dev = []

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nanobot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["nanobot", "tests"]
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
