[project]
name = "mutsukibot"
version = "0.1.0"
description = "Agent-centric bot framework providing the runtime core for Yume / mind-sim and a plugin-composed reproduction of traditional bot framework capabilities."
requires-python = ">=3.13"
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "msgspec>=0.18",
    "docstring_parser>=0.16",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "rich>=13.0",
]

[project.entry-points."mutsukibot.plugins"]
echo = "mutsukibot.plugins.echo:EchoPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mutsukibot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "UP037",    # quoted-annotation
    "RUF001",   # ambiguous-unicode-character-string
    "RUF002",   # ambiguous-unicode-character-docstring
    "RUF003",   # ambiguous-unicode-character-comment
    "RUF012",   # mutable class attribute — msgspec.Struct uses class defaults intentionally
    "PYI034",   # __new__ Self — registered str subclasses intentionally return existing instance
    "ASYNC109", # async function with timeout param — InMemoryAdapter.drain_outbox by design
    "UP046",    # PEP 695 generics — Generic[T] subclassing is fine and works with msgspec
    "UP047",    # PEP 695 generic functions — keep Generic-style for consistency
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "T20",  # allow print() in smoke-style tests
    "PT011", # broad pytest.raises is fine in tests
]
"mutsukibot/plugins/echo/smoke.py" = [
    "T20", # smoke entry prints to stdout intentionally
]
"mutsukibot/plugins/todo/smoke.py" = [
    "T20",
]
"mutsukibot/plugins/qq_to_todo/smoke.py" = [
    "T20",
]
"mutsukibot/plugins/cross_agent_smoke.py" = [
    "T20",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["mutsukibot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["mutsukibot", "tests"]
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pyrefly]
project-includes = ["mutsukibot", "tests"]
project-excludes = [".venv", "**/__pycache__"]
python-version = "3.13"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
]
