[package]
name = "mutsuki-runtime-benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
csv.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-host = { path = "../mutsuki-runtime-host" }
serde.workspace = true
serde_json.workspace = true
