[package]
name = "mutsuki-runtime-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core = { path = "../mutsuki-runtime-core" }
mutsuki-runtime-sdk = { path = "../mutsuki-runtime-sdk" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
mutsuki-plugin-resource-memory = { path = "../../plugins/mutsuki-plugin-resource-memory" }
mutsuki-plugin-resource-shared-memory = { path = "../../plugins/mutsuki-plugin-resource-shared-memory" }
