[package]
name = "mutsuki-runtime-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core = { path = "../mutsuki-runtime-core" }
mutsuki-runtime-sdk = { path = "../mutsuki-runtime-sdk" }
mutsuki-runtime-wire.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
libc.workspace = true

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = [
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
] }
