[package]
name = "mutsuki-runtime-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-wire.workspace = true
mutsuki-runtime-sdk-macros = { path = "../mutsuki-runtime-sdk-macros" }
serde.workspace = true
serde_json.workspace = true
