[package]
name = "mutsuki-plugin-db-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core = { path = "../../crates/mutsuki-runtime-core" }
mutsuki-runtime-sdk = { path = "../../crates/mutsuki-runtime-sdk" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
