[package]
name = "mutsuki-plugin-workflow-linear"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core = { path = "../../crates/mutsuki-runtime-core" }
mutsuki-runtime-sdk = { path = "../../crates/mutsuki-runtime-sdk" }
serde_json.workspace = true
