[package]
name = "mutsuki-qqbot"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[dependencies]
mutsuki-runtime-contracts = { path = "../../crates/mutsuki-runtime-contracts" }
mutsuki-runtime-core = { path = "../../crates/mutsuki-runtime-core" }
mutsuki-runtime-host = { path = "../../crates/mutsuki-runtime-host" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

