[package]
name = "mutsuki-plugin-dev-claude-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[dependencies]
mutsuki-runtime-contracts = { path = "../../../../crates/mutsuki-runtime-contracts" }
mutsuki-runtime-core = { path = "../../../../crates/mutsuki-runtime-core" }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
