[package]
name = "mutsukicore-codex-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[dependencies]
mutsukicore-runtime-contracts = { path = "../../../../crates/mutsukicore-runtime-contracts" }
mutsukicore-runtime-core = { path = "../../../../crates/mutsukicore-runtime-core" }
serde_json = "1.0"
